{
  "sourceLanguage" : "en",
  "strings" : {
    "Already have an account ?" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vous avez déjà un compte ?"
          }
        }
      }
    },
    "Create your account" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Créer un compte"
          }
        }
      }
    },
    "Don't have an account ?" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vous n’avez pas de compte ?"
          }
        }
      }
    },
    "Email*" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Email*"
          }
        }
      }
    },
    "Enter your email" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Entrez votre email"
          }
        }
      }
    },
    "Enter your first name" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Entrez votre prénom"
          }
        }
      }
    },
    "Enter your name" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Entrez votre nom"
          }
        }
      }
    },
    "Enter your password" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Entrez votre mot de passe"
          }
        }
      }
    },
    "Enter your password confirmation" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Confirmez votre mot de passe"
          }
        }
      }
    },
    "First name*" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Prénom*"
          }
        }
      }
    },
    "Forgot password?" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mot de passe oublié ?"
          }
        }
      }
    },
    "I agree to all Term, Privacy Policy and Fees" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "J'accepte les Termes, la Politique de confidentialité et les Frais"
          }
        }
      }
    },
    "Immotep" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Immotep"
          }
        }
      }
    },
    "Join Immotep for your peace of mind!" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rejoignez Immotep pour votre tranquillité d’esprit !"
          }
        }
      }
    },
    "Keep me signed in" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rester connecté"
          }
        }
      }
    },
    "Log In" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Se connecter"
          }
        }
      }
    },
    "Name*" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nom*"
          }
        }
      }
    },
    "Password confirmation*" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Confirmation du mot de passe*"
          }
        }
      }
    },
    "Password*" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mot de passe*"
          }
        }
      }
    },
    "Please enter your details to sign in." : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Veuillez entrer vos identifiants pour vous connecter"
          }
        }
      }
    },
    "Sign In" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Se connecter"
          }
        }
      }
    },
    "Sign Up" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "S’inscrire"
          }
        }
      }
    },
    "Welcome back" : {
      "localizations" : {
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Bienvenue à nouveau !"
          }
        }
      }
    }
  },
  "version" : "1.0"
}