...
        NavigationStack {
            VStack(spacing: 0) {
                TopBar(title: "Profile".localized())

                ScrollView {
                    VStack(spacing: 20) {
                        Image(systemName: "person.crop.circle.fill")
                            .font(.system(size: 50))
                            .foregroundStyle(Color("textColor"))
                            .padding(.top, 20)

                        VStack(spacing: 20) {
                            CustomTextInput(title: "Email", placeholder: "", text: $editableEmail, isSecure: false)
...
                    .overlay(
                        RoundedRectangle(cornerRadius: 10)
                            .stroke(Color.gray, lineWidth: 0.5)
                    )
                    .padding(10)

                    Button("Logout".localized()) {
                        signOut()
                    }
                    .frame(maxWidth: .infinity)
                    .padding()
                    .background(Color("btnColor"))
                    .foregroundColor(.white)
...
