...
                                Text("Don't have an account ?".localized())
                                    .font(.subheadline)
                                NavigationLink(destination: RegisterView()) {
                                    Text("Sign Up".localized())
                                        .font(.subheadline)
                                        .foregroundColor(.blue)
                                        .accessibilityIdentifier("signUpLink")
                                }
                            }
                        }
                        .padding(.horizontal, 40)
                    }
                    Spacer()
...
